CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(AnodePlasmaMC)

ADD_EXECUTABLE(AnodePlasmaMC main.cpp)

FIND_PACKAGE(ROOT REQUIRED)
MESSAGE(STATUS "CMAKE_PREFIX_PATH=" ${CMAKE_PREFIX_PATH})
MESSAGE(STATUS "ROOT_INCLUDE_DIRS=" ${ROOT_INCLUDE_DIRS})
MESSAGE(STATUS "ROOT_LIBRARIES=" ${ROOT_LIBRARIES})
LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})

# add the vector 3 library folder
INCLUDE_DIRECTORIES("~/Vector3")
INCLUDE_DIRECTORIES("~/CERN-ROOT-Histogram-Tools")
INCLUDE_DIRECTORIES("~/Numerical-String-Format")
INCLUDE_DIRECTORIES("include")

INCLUDE_DIRECTORIES(${ROOT_INCLUDE_DIRS})



TARGET_LINK_LIBRARIES(AnodePlasmaMC ${ROOT_LIBRARIES})
